# qr-ml-model

./: .gitignore  Cargo.toml  README.md
src/: main.rs  task_1.rs  task_2.rs  task_3.rs  task_4.rs
