[package]
name = "qr-ml-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version="0.32.2", features=["rand", "serde-serialize"] }
rand = "0.8.5"
serde = { version="1.0.164", features=["derive"] }
serde_json = "1.0.97"
show-image = "0.13.1"
threadpool = "1.8.1"

[profile.release]
codegen-units = 1
lto = true